<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingBottom="40dp"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <!-- Nadpis -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_options"
            android:textSize="28sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/black"
            android:layout_marginBottom="30dp" />

        <!-- Farba pálky -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paddle_color"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/paddleRed"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:foreground="?attr/selectableItemBackground"/>

        <Button
            android:id="@+id/paddleBlue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:foreground="?attr/selectableItemBackground"/>

        <Button
            android:id="@+id/paddleGreen"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:foreground="?attr/selectableItemBackground" />



        <!-- Farba tehličiek -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brick_color"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/brickRed"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:foreground="?attr/selectableItemBackground"/>

        <Button
            android:id="@+id/brickWhite"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/white"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:background="@drawable/black_border"
            android:backgroundTint="@android:color/white"
            android:foreground="?attr/selectableItemBackground"/>

        <!-- Farba loptičky -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ball_color"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/ballRed"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:foreground="?attr/selectableItemBackground"/>

        <Button
            android:id="@+id/ballWhite"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/white"
            android:layout_marginBottom="30dp"
            android:textColor="@color/black"
            android:background="@drawable/black_border"
            android:backgroundTint="@android:color/white"
            android:foreground="?attr/selectableItemBackground"/>

        <!-- Späť -->
        <Button
            android:id="@+id/backButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="10dp" />

    </LinearLayout>
</ScrollView>
